STYLE | changed the margin of input component in a form, solved the subscrition box alignment issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,7 +107,7 @@ input {
   padding: 10px 20px;
   outline: none;
   transition: 0.3s;
-  margin: 10px;
+  margin-right: 10px;
 }
 
 input:focus {
